--- a/src/pages/movie-detail/movie-detail.html
+++ b/src/pages/movie-detail/movie-detail.html
@@ -1,21 +1,17 @@
 <!--
-  Generated template for the FeedPage page.
+  Generated template for the MovieDetailPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
 <ion-header>
   <ion-navbar>
-    <ion-title>Feed</ion-title>
+    <ion-title>Movie Detail</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <ion-refresher (ionRefresh)="doRefresh($event)">
-    <ion-refresher-content></ion-refresher-content>
-  </ion-refresher>
-  <!--*ngIt serve pra carregar dinamicamente os retorno da api-->
-  <ion-card *ngFor="let movie of movies_list">
+  <ion-card *ngIf="movie">
     <ion-item>
       <ion-avatar item-start>
         <img src="https://www.themoviedb.org/assets/1/v4/logos/208x226-stacked-green-9484383bd9853615c113f020def5cbe27f6d08a84ff834f41371f223ebad4a3c.png">
@@ -32,15 +28,6 @@
         {{ movie.overview }}
       </p>
     </ion-card-content>
-
-    <ion-row>
-      <ion-col>
-        <button ion-button icon-start clear small>
-          <ion-icon name="thumbs-up"></ion-icon>
-          <div>{{ movie.vote_count }} Votes</div>
-        </button>
-      </ion-col>
-    </ion-row>
-    <button ion-button block (click)="openDetail(movie)">Details</button>
   </ion-card>
+
 </ion-content>
