Beginner Ionic App finished

--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -43,4 +43,7 @@
     </ion-row>
     <button ion-button block (click)="openDetail(movie)">Details</button>
   </ion-card>
+  <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+    <ion-infinite-scroll-content></ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 </ion-content>
