--- a/foodapp/food.app/src/pages/login/login.html
+++ b/foodapp/food.app/src/pages/login/login.html
@@ -1,18 +1,29 @@
-<!--
-  Generated template for the LoginPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>login</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
-<ion-content padding>
-  <button ion-button block (click)="openCategory()">Login</button>
+<ion-content>
+  
+    <div class="logo">
+      <img src="/assets/imagens/icon-branco.png" alt="">
+      <span>FoodApp</span>
+    </div>
+  
+    <ion-list no-lines>
+      <ion-item>
+        <ion-input type="text" placeholder="E-mail"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-input type="password" placeholder="Password"></ion-input>
+      </ion-item>
+    </ion-list>
+  
+    <ion-grid>
+      <ion-row>
+        <button ion-button block round (click)="openCategory()" color="secondary">Login</button>
+      </ion-row>
+      <ion-row>
+        <button ion-button block outline round color="secondary">Subscriber</button>
+      </ion-row>
+      <ion-row>
+        <button ion-button clear block color="light">Manage Accounts</button>
+      </ion-row>
+    </ion-grid>
+  
 </ion-content>
