--- a/foodapp/food.app/src/pages/tabs/tabs.html
+++ b/foodapp/food.app/src/pages/tabs/tabs.html
@@ -1,5 +1,5 @@
 <ion-tabs>
-  <ion-tab tabIcon="menu" tabTitle="Categories" [root]="'CategoryPage'"></ion-tab>
+  <ion-tab tabIcon="menu" tabTitle="Categories" (ionSelect)="selectCategory($event)" [root]="'ProductPage'"></ion-tab>
   <ion-tab tabIcon="pricetags" tabTitle="Orders" [root]="'OrdersPage'"></ion-tab>
   <ion-tab tabIcon="contact" tabTitle="My Account" [root]="'MyaccountPage'"></ion-tab>
 </ion-tabs>
