--- a/foodapp/food.app/src/pages/adm-category/adm-category.html
+++ b/foodapp/food.app/src/pages/adm-category/adm-category.html
@@ -1,16 +1,30 @@
 <ion-header>
   <ion-navbar color="primary">
-    <ion-title>Categories</ion-title>
-    <ion-buttons right>
-      <button ion-button icon-only></button>
-      <ion-icon name="add"></ion-icon>
+    <ion-title>Category</ion-title>
+    <ion-buttons end>
+      <button ion-button clear>
+        Save
+      </button>
+      <button ion-button icon-only>
+        <ion-icon name="trash"></ion-icon>
+      </button>
     </ion-buttons>
   </ion-navbar>
 </ion-header>
-<ion-content no-padding>
+<ion-content padding>
   <ion-list no-lines>
-    <ion-item *ngFor="let category of list">
-      {{ category.title }}
+    <ion-item>
+      <ion-label floating>Title</ion-label>
+      <ion-input [(ngModel)]="category.title" type="Text"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-textarea [(ngModel)]="category.description" rows="2" placeholder="Add category description"></ion-textarea>
+    </ion-item>
+    <ion-item text-center>
+      <button ion-button clear icon-start>
+        <ion-icon name="camera"></ion-icon>  
+        Select Photo
+      </button>
     </ion-item>
   </ion-list>
 </ion-content>
